methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:15: error: not found: value flase
     caseVerte = flase
                 ^